<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context="MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:src="@drawable/logo" />


    <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_marginStart="280dp"
            android:text="@string/newRegistration" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="300dp"
        android:background="#E7D9E3"
        android:orientation="vertical"
        android:visibility="visible">


        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/loginButton"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



