<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#E7D9E3"
    tools:context=".SecondActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editUserId"
            android:hint="@string/hint_userid"
            android:layout_marginTop="30dp"
            android:layout_width="310dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSearch"
            android:text="@string/search"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp" />

        <Button
            android:id="@+id/buttonAddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_add"
            android:layout_marginTop="30dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFriendList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E7D9E3"
            android:layout_marginTop="30dp"
            android:layout_weight="1" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="80dp"
        android:onClick="onBackButtonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />
    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="660dp"
        android:layout_marginStart="260dp"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/buttonJoinByCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="660dp"
        android:text="@string/join_by_code" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>


